# cert-firma-cc

./: .gitignore  CLAUDE.md  CONSTITUTION.md  iniciar.bat  pyproject.toml
app/: app.py
docs/architecture/: adr-0001-hash-sin-cedula.md  adr-0002-pivot-google-apps-script.md  adr-0003-hash-v2-sin-fecha-emision.md  app_map.md
docs/procedimientos/: procedimiento_oficial_emision_certificados.md
docs/qa/: analisis_google_sheets_vs_app_local_20260604.md  protocolo_qa_emision_certificados.md  reporte_qa_20260529.md
docs/specs/: 2026-05-26_acta_hash_certificados.md  2026-05-26_app_local.md  2026-05-26_excel_acta.md  2026-05-26_pdf_acta.md  2026-05-29_documentacion_proceso_oficial.md  2026-06-04_app_navega_subcarpeta_sin_firma.md  2026-06-09_gas_slice2_listado_acta.md
gas/: canonical_hash.js  test_parity.mjs
scripts/: bajar_certificados.py  calcular_hash.py  estampar.py  extraer_campos.py  generar_acta.py  generar_excel_acta.py  generar_muestras_visuales.py  generar_pdf_acta.py  qa_suite.py  smoke_extractor.py  smoke_extractor_todos.py  verificar.py
