[project]
name = "cert-firma-cc"
version = "0.1.0"
description = "Hash + acta unica para certificados del Centro de Capacitacion CGR (piloto)"
requires-python = ">=3.11"
authors = [{name = "Alejandro Herrera Lopez"}]
dependencies = [
    "pymupdf>=1.27",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "qrcode[pil]>=7.0",   # solo para variante B
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
